--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "mysql": "^2.18.1",
     "mysql2": "^3.3.5",
     "next": "13.4.5",
+    "next-seo": "^6.1.0",
     "postcss": "^8.4.24",
     "react": "18.2.0",
     "react-dom": "18.2.0",
