--- a/package.json
+++ b/package.json
@@ -15,30 +15,39 @@
     "@fortawesome/free-regular-svg-icons": "^6.4.0",
     "@fortawesome/free-solid-svg-icons": "^6.4.0",
     "autoprefixer": "^10.4.14",
+    "cssbeautify": "^0.3.1",
+    "dom-parser": "^0.1.6",
     "eslint": "8.42.0",
     "eslint-config-next": "13.4.5",
     "fs-extra": "^11.1.1",
     "html-minifier": "^4.0.0",
     "mathjs": "^11.8.2",
+    "module": "^1.2.5",
     "mysql": "^2.18.1",
     "mysql2": "^3.3.5",
     "next": "13.4.5",
     "next-seo": "^6.1.0",
+    "next-sitemap": "^4.1.8",
     "postcss": "^8.4.24",
+    "prettier": "^3.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-ripples": "^2.2.1",
     "react-toastify": "^9.1.3",
     "react-top-loading-bar": "^2.3.1",
     "remark": "^14.0.3",
     "remark-html": "^15.0.2",
     "sass": "^1.63.4",
+    "sitemap": "^7.1.1",
     "slugify": "^1.6.6",
     "tailwindcss": "^3.3.2",
     "uglify-js": "^3.17.4",
-    "uglifycss": "^0.0.29"
+    "uglifycss": "^0.0.29",
+    "xmlbuilder2": "^3.1.1"
   },
   "devDependencies": {
     "@types/node": "20.3.1",
-    "@types/react": "18.2.12"
+    "@types/react": "18.2.12",
+    "file-loader": "^6.2.0"
   }
 }
