--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@fortawesome/free-brands-svg-icons": "^6.4.0",
     "@fortawesome/free-regular-svg-icons": "^6.4.0",
     "@fortawesome/free-solid-svg-icons": "^6.4.0",
+    "@vercel/analytics": "^1.0.1",
     "autoprefixer": "^10.4.14",
     "cssbeautify": "^0.3.1",
     "dom-parser": "^0.1.6",
