--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.4.0",
     "@vercel/analytics": "^1.0.1",
     "autoprefixer": "^10.4.14",
+    "babel-loader": "^9.1.3",
     "cssbeautify": "^0.3.1",
     "dom-parser": "^0.1.6",
     "eslint": "8.42.0",
@@ -49,6 +50,7 @@
   "devDependencies": {
     "@types/node": "20.3.1",
     "@types/react": "18.2.12",
-    "file-loader": "^6.2.0"
+    "file-loader": "^6.2.0",
+    "worker-plugin": "^5.0.1"
   }
 }
