--- a/package.json
+++ b/package.json
@@ -14,25 +14,34 @@
     "@fortawesome/free-brands-svg-icons": "^6.4.0",
     "@fortawesome/free-regular-svg-icons": "^6.4.0",
     "@fortawesome/free-solid-svg-icons": "^6.4.0",
+    "@sendgrid/mail": "^7.7.0",
     "@vercel/analytics": "^1.0.1",
     "autoprefixer": "^10.4.14",
     "babel-loader": "^9.1.3",
+    "bcrypt": "^5.1.0",
     "cssbeautify": "^0.3.1",
     "dom-parser": "^0.1.6",
     "eslint": "8.42.0",
     "eslint-config-next": "13.4.5",
+    "express": "^4.18.2",
+    "file-saver": "^2.0.5",
     "fs-extra": "^11.1.1",
     "html-minifier": "^4.0.0",
+    "jsonwebtoken": "^9.0.1",
     "mathjs": "^11.8.2",
     "module": "^1.2.5",
+    "mongoose": "^7.3.4",
     "mysql": "^2.18.1",
     "mysql2": "^3.3.5",
     "next": "13.4.5",
+    "next-iron-session": "^4.2.0",
     "next-seo": "^6.1.0",
     "next-sitemap": "^4.1.8",
+    "nodemailer": "^6.9.3",
     "postcss": "^8.4.24",
     "prettier": "^3.0.0",
     "react": "18.2.0",
+    "react-color": "^2.19.3",
     "react-dom": "18.2.0",
     "react-ripples": "^2.2.1",
     "react-toastify": "^9.1.3",
@@ -40,11 +49,14 @@
     "remark": "^14.0.3",
     "remark-html": "^15.0.2",
     "sass": "^1.63.4",
+    "sib-api-v3-sdk": "^8.5.0",
     "sitemap": "^7.1.1",
     "slugify": "^1.6.6",
     "tailwindcss": "^3.3.2",
     "uglify-js": "^3.17.4",
     "uglifycss": "^0.0.29",
+    "uuid": "^9.0.0",
+    "xlsx": "^0.18.5",
     "xmlbuilder2": "^3.1.1"
   },
   "devDependencies": {
