--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "autoprefixer": "^10.4.14",
     "babel-loader": "^9.1.3",
     "bcrypt": "^5.1.0",
+    "compromise": "^14.9.0",
     "cssbeautify": "^0.3.1",
     "dom-parser": "^0.1.6",
     "eslint": "8.42.0",
@@ -33,6 +34,7 @@
     "mongoose": "^7.3.4",
     "mysql": "^2.18.1",
     "mysql2": "^3.3.5",
+    "natural": "^6.5.0",
     "next": "13.4.5",
     "next-iron-session": "^4.2.0",
     "next-seo": "^6.1.0",
