--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
     "@fortawesome/free-brands-svg-icons": "^6.4.0",
     "@fortawesome/free-regular-svg-icons": "^6.4.0",
     "@fortawesome/free-solid-svg-icons": "^6.4.0",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "@sendgrid/mail": "^7.7.0",
     "@vercel/analytics": "^1.0.1",
     "autoprefixer": "^10.4.14",
     "babel-loader": "^9.1.3",
+    "babel-plugin-macros": "^3.1.0",
     "bcrypt": "^5.1.0",
     "compromise": "^14.9.0",
     "cssbeautify": "^0.3.1",
