--- a/package.json
+++ b/package.json
@@ -9,29 +9,47 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
     "@fortawesome/fontawesome-free": "^6.4.0",
     "@fortawesome/fontawesome-svg-core": "^6.4.0",
     "@fortawesome/free-brands-svg-icons": "^6.4.0",
     "@fortawesome/free-regular-svg-icons": "^6.4.0",
     "@fortawesome/free-solid-svg-icons": "^6.4.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@mui/icons-material": "^5.14.1",
+    "@mui/material": "^5.14.1",
     "@sendgrid/mail": "^7.7.0",
+    "@testing-library/react": "^14.0.0",
     "@vercel/analytics": "^1.0.1",
     "autoprefixer": "^10.4.14",
     "babel-loader": "^9.1.3",
     "babel-plugin-macros": "^3.1.0",
     "bcrypt": "^5.1.0",
+    "boxicons": "^2.1.4",
+    "comlink": "^4.4.1",
+    "comlink-loader": "^2.0.0",
     "compromise": "^14.9.0",
     "cssbeautify": "^0.3.1",
+    "date-fns": "^2.30.0",
     "dom-parser": "^0.1.6",
+    "dom-to-image": "^2.6.0",
     "eslint": "8.42.0",
     "eslint-config-next": "13.4.5",
     "express": "^4.18.2",
+    "fabric": "^5.3.0",
     "file-saver": "^2.0.5",
     "fs-extra": "^11.1.1",
     "html-minifier": "^4.0.0",
+    "html2canvas": "^1.4.1",
+    "install": "^0.13.0",
+    "ioredis": "^5.3.2",
     "jsonwebtoken": "^9.0.1",
+    "math-expressions": "^2.0.0-alpha64",
+    "mathjax": "^3.2.2",
     "mathjs": "^11.8.2",
+    "mathquill": "^0.10.1-a",
+    "memoizee": "^0.4.15",
     "module": "^1.2.5",
     "mongoose": "^7.3.4",
     "mysql": "^2.18.1",
@@ -42,12 +60,21 @@
     "next-seo": "^6.1.0",
     "next-sitemap": "^4.1.8",
     "nodemailer": "^6.9.3",
+    "npm": "^9.8.1",
+    "plotly.js-basic-dist": "^2.24.3",
     "postcss": "^8.4.24",
     "prettier": "^3.0.0",
     "react": "18.2.0",
     "react-color": "^2.19.3",
+    "react-datepicker": "^4.16.0",
+    "react-datetime": "^3.2.0",
     "react-dom": "18.2.0",
+    "react-google-charts": "^4.0.1",
+    "react-highlight": "^0.15.0",
+    "react-math-keyboard": "^1.2.32",
+    "react-mathquill": "^1.0.3",
     "react-ripples": "^2.2.1",
+    "react-syntax-highlighter": "^15.5.0",
     "react-toastify": "^9.1.3",
     "react-top-loading-bar": "^2.3.1",
     "remark": "^14.0.3",
@@ -60,6 +87,8 @@
     "uglify-js": "^3.17.4",
     "uglifycss": "^0.0.29",
     "uuid": "^9.0.0",
+    "worker-loader": "^3.0.8",
+    "workerize-loader": "^2.0.2",
     "xlsx": "^0.18.5",
     "xmlbuilder2": "^3.1.1"
   },
