--- a/package.json
+++ b/package.json
@@ -21,12 +21,16 @@
     "@mui/material": "^5.14.1",
     "@sendgrid/mail": "^7.7.0",
     "@testing-library/react": "^14.0.0",
+    "@types/react-dom": "^18.2.7",
     "@vercel/analytics": "^1.0.1",
     "autoprefixer": "^10.4.14",
+    "axios": "^1.4.0",
     "babel-loader": "^9.1.3",
     "babel-plugin-macros": "^3.1.0",
     "bcrypt": "^5.1.0",
     "boxicons": "^2.1.4",
+    "chart.js": "^4.3.2",
+    "cheerio": "^1.0.0-rc.12",
     "comlink": "^4.4.1",
     "comlink-loader": "^2.0.0",
     "compromise": "^14.9.0",
@@ -55,7 +59,7 @@
     "mysql": "^2.18.1",
     "mysql2": "^3.3.5",
     "natural": "^6.5.0",
-    "next": "13.4.5",
+    "next": "^13.4.5",
     "next-iron-session": "^4.2.0",
     "next-seo": "^6.1.0",
     "next-sitemap": "^4.1.8",
@@ -64,11 +68,14 @@
     "plotly.js-basic-dist": "^2.24.3",
     "postcss": "^8.4.24",
     "prettier": "^3.0.0",
-    "react": "18.2.0",
+    "puppeteer": "^20.9.0",
+    "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-color": "^2.19.3",
+    "react-colorful": "^5.6.1",
     "react-datepicker": "^4.16.0",
     "react-datetime": "^3.2.0",
-    "react-dom": "18.2.0",
+    "react-dom": "^18.2.0",
     "react-google-charts": "^4.0.1",
     "react-highlight": "^0.15.0",
     "react-math-keyboard": "^1.2.32",
@@ -84,6 +91,7 @@
     "sitemap": "^7.1.1",
     "slugify": "^1.6.6",
     "tailwindcss": "^3.3.2",
+    "talisman": "^1.1.4",
     "uglify-js": "^3.17.4",
     "uglifycss": "^0.0.29",
     "uuid": "^9.0.0",
@@ -94,7 +102,7 @@
   },
   "devDependencies": {
     "@types/node": "20.3.1",
-    "@types/react": "18.2.12",
+    "@types/react": "^18.2.12",
     "file-loader": "^6.2.0",
     "worker-plugin": "^5.0.1"
   }
