--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "install": "^0.13.0",
     "ioredis": "^5.3.2",
     "jsonwebtoken": "^9.0.1",
+    "lodash.debounce": "^4.0.8",
     "math-expressions": "^2.0.0-alpha64",
     "mathjax": "^3.2.2",
     "mathjs": "^11.8.2",
@@ -84,6 +85,7 @@
     "react-syntax-highlighter": "^15.5.0",
     "react-toastify": "^9.1.3",
     "react-top-loading-bar": "^2.3.1",
+    "react-window": "^1.8.9",
     "remark": "^14.0.3",
     "remark-html": "^15.0.2",
     "sass": "^1.63.4",
