--- a/package.json
+++ b/package.json
@@ -60,7 +60,7 @@
     "mysql": "^2.18.1",
     "mysql2": "^3.3.5",
     "natural": "^6.5.0",
-    "next": "^13.4.5",
+    "next": "^13.4.18",
     "next-iron-session": "^4.2.0",
     "next-seo": "^6.1.0",
     "next-sitemap": "^4.1.8",
@@ -82,6 +82,7 @@
     "react-math-keyboard": "^1.2.32",
     "react-mathquill": "^1.0.3",
     "react-ripples": "^2.2.1",
+    "react-spinners": "^0.13.8",
     "react-syntax-highlighter": "^15.5.0",
     "react-toastify": "^9.1.3",
     "react-top-loading-bar": "^2.3.1",
