--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "fabric": "^5.3.0",
     "file-saver": "^2.0.5",
     "fs-extra": "^11.1.1",
+    "gray-matter": "^4.0.3",
     "html-minifier": "^4.0.0",
     "html2canvas": "^1.4.1",
     "install": "^0.13.0",
@@ -60,7 +61,7 @@
     "mysql": "^2.18.1",
     "mysql2": "^3.3.5",
     "natural": "^6.5.0",
-    "next": "^13.4.18",
+    "next": "^13.5.11",
     "next-iron-session": "^4.2.0",
     "next-seo": "^6.1.0",
     "next-sitemap": "^4.1.8",
@@ -70,13 +71,13 @@
     "postcss": "^8.4.24",
     "prettier": "^3.0.0",
     "puppeteer": "^20.9.0",
-    "react": "^18.2.0",
+    "react": "^18.3.1",
     "react-chartjs-2": "^5.2.0",
     "react-color": "^2.19.3",
     "react-colorful": "^5.6.1",
     "react-datepicker": "^4.16.0",
     "react-datetime": "^3.2.0",
-    "react-dom": "^18.2.0",
+    "react-dom": "^18.3.1",
     "react-google-charts": "^4.0.1",
     "react-highlight": "^0.15.0",
     "react-math-keyboard": "^1.2.32",
@@ -93,6 +94,8 @@
     "sib-api-v3-sdk": "^8.5.0",
     "sitemap": "^7.1.1",
     "slugify": "^1.6.6",
+    "sqlite": "^5.1.1",
+    "sqlite3": "^5.1.7",
     "tailwindcss": "^3.3.2",
     "talisman": "^1.1.4",
     "uglify-js": "^3.17.4",
