Changes functions to API

--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "boxicons": "^2.1.4",
     "chart.js": "^4.3.2",
     "cheerio": "^1.0.0-rc.12",
+    "chrome-aws-lambda": "^10.1.0",
     "comlink": "^4.4.1",
     "comlink-loader": "^2.0.0",
     "compromise": "^14.9.0",
@@ -71,6 +72,7 @@
     "postcss": "^8.4.24",
     "prettier": "^3.0.0",
     "puppeteer": "^20.9.0",
+    "puppeteer-core": "^24.10.2",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.2.0",
     "react-color": "^2.19.3",
@@ -80,6 +82,7 @@
     "react-dom": "^18.3.1",
     "react-google-charts": "^4.0.1",
     "react-highlight": "^0.15.0",
+    "react-loading-skeleton": "^3.5.0",
     "react-math-keyboard": "^1.2.32",
     "react-mathquill": "^1.0.3",
     "react-ripples": "^2.2.1",
